# set

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  YELLOW_PAPER.md
.github/workflows/: devnet-smoke.yml  security.yml
anchor/: Cargo.toml  Dockerfile
anchor/src/: client.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  service.rs  tests.rs  types.rs
anchor/tests/: README.md  integration.rs
anchor/tests/common/: mock_sequencer.rs  mod.rs  test_contracts.rs
config/: chain-config.toml  local.env.example  sepolia.env.example
contracts/: .env.arc.example  SetRegistry.sol  foundry.toml  foundry.v2.toml  slither.config.json
contracts/cache-dom/: solidity-files-cache.json
contracts/cache_v2/: solidity-files-cache.json
contracts/cache_v2_quick/: solidity-files-cache.json
contracts/commerce/: SetPaymaster.sol  SetPaymentBatch.sol
contracts/foundry-v2/: foundry.toml
contracts/governance/: SetTimelock.sol
contracts/mev/: EncryptedMempool.sol  ForcedInclusion.sol  SequencerAttestation.sol  ThresholdKeyRegistry.sol
contracts/script/: Deploy.s.sol  DeployGovernance.s.sol  DeployX402Arc.s.sol  DeployX402Test.s.sol  test_x402_e2e.sh
contracts/stablecoin/: NAVOracle.sol  SSDC.sol  TokenRegistry.sol  TreasuryVault.sol  ssUSD.sol  wSSDC.sol  wssUSD.sol
contracts/test/: EncryptedMempool.t.sol  ForcedInclusion.t.sol  Integration.t.sol  SecurityFixes.t.sol  SequencerAttestation.t.sol  SetPaymaster.t.sol  SetPaymentBatch.t.sol  SetRegistry.invariants.t.sol  SetRegistry.t.sol  SetTimelock.t.sol  ThresholdKeyRegistry.t.sol  wssUSD.t.sol  (+1 more)
docker/: docker-compose.explorer.yml  docker-compose.geth.yml  docker-compose.keypers.yml  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.nethermind.yml  docker-compose.reth.yml  docker-compose.sepolia.yml  docker-compose.yml
docs/: api-reference.md  arc-deployment-checklist.md  architecture.md  audit-report.md  bridge.md  decentralization.md  explorer.md  fault-proof-exercise.md  fault-proofs.md  glossary.md  governance-evidence.md  integration-example.md  local_testing_guide.md  mev-protection.md  monitoring.md  node-operators.md  operations-history.md  runbook.md  sandbox-l2-execution-spec.md  scorecard.md  security.md  stablecoin-v2-invoice-vault-review.md  stablecoin.md  threat-model.md  toolchain.md  whitepaper.html  whitepaper.md
scripts/: anchor-devnet.sh  check-l1-settlement.sh  deploy-l1.sh  deploy-sepolia.sh  deploy-set-contracts.sh  dev.sh  fault-proof-exercise.sh  foundry-common.sh  generate-genesis.sh  install-op-stack.sh  mock-sequencer.py  quick-start-local.sh  reset-devnet.sh  security-analysis.sh  start-devnet.sh  start-local-anvil.sh  stop-devnet.sh  test-anchor.sh  validate-devnet.sh  validate-ops-config.sh
sdk/: README.md  package.json  tsconfig.json  vitest.config.ts
src/: main.rs
(+1534 files in other folders)
