[package]
name = "set-chain"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.1", features = ["full"] }
ethers-core = "0.20"
ethers-contract = "0.20"
ethers-providers = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
ethers-contract-build = "0.20"

