[package]
name = "set-anchor"
version = "0.1.0"
edition = "2021"
description = "Anchor service for Set Chain - bridges stateset-sequencer to on-chain SetRegistry"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Ethereum/Alloy
alloy = { version = "0.9", features = ["full"] }
alloy-primitives = "0.9"
alloy-sol-types = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
alloy-sol-macro = "0.9"

[[bin]]
name = "set-anchor"
path = "src/main.rs"
