[package]
name = "set-anchor"
version = "0.2.0"
edition = "2021"
description = "Anchor service for Set Chain - bridges stateset-sequencer to on-chain SetRegistry"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Ethereum/Alloy (pinned to compatible versions)
alloy = { version = "0.8", features = ["full"] }
alloy-primitives = "0.8"
alloy-sol-types = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP server for health endpoints
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[build-dependencies]
alloy-sol-macro = "0.8"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
once_cell = "1"
serial_test = "3"

# Alloy node bindings for local testing
alloy-node-bindings = "0.8"

[[bin]]
name = "set-anchor"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
